--- a/scss/sections/_cost.scss
+++ b/scss/sections/_cost.scss
@@ -50,20 +50,27 @@
     font-weight: 300;
     line-height: 32px;
     color: rgb(42, 64, 86);
+}
 
-    p:last-child {
-        display: none;
-    }
+.cost__text--none {
+    display: none;
 }
 
 .cost__timer {
     margin-top: 40px;
     margin-bottom: 56px;
+
+    &--none {
+        display: none;
+    }
 }
 
 .cost-list-wrapper {
     margin-bottom: 64px;
-    display: none;
+
+    &--none {
+        display: none;
+    }
 }
 
 .cost-include__title {
